test/fail/MultiplePrecedence.curry
module MultiplePrecedence where

infixl 5 `f`, `f`
infixr 4 `f`

f x = x
